# Spectre

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sie.patch
.github/workflows/: build.yml
include/googletest/: gtest-all.cc
include/smath/: rect.cpp  rect.h  smath.h
include/tsimd/: tsimd.h
src/: main.cpp  pch.h  playground.h
src/core/camera/: camera.cpp  camera.h  orthographiccamera.cpp  orthographiccamera.h  perspectivecamera.cpp  perspectivecamera.h
src/core/film/: film.cpp  film.h  filmtile.cpp  filmtile.h  pixel.h  resolution.cpp  resolution.h  standardresolution.h
src/core/geometry/: geometry.cpp  geometry.h  primitive.h  (+3 more)
src/exporter/: exporter.h  imageexporter.cpp  imageexporter.h  stbexporter.cpp  stbexporter.h
src/math/: constants.h  linalg.h  math.h  mathutils.h  matrix.h  matrix4x4.cpp  matrix4x4.h  matrix_impl.h  normal.h  normal_impl.h  point.h  point_impl.h  random.h  ray.cpp  ray.h  rect.cpp  rect.h  transform.cpp  transform.h  vector.cpp  vector.h  vector4.cpp  vector4.h  vector_impl.h
src/system/: system.h
src/test/: exampletest.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp  playground.cpp  playground.h
test/exporter/: exporter_test.cpp
test/math/: matrix4x4_test.cpp
tests/: CMakeLists.txt
tests/googletest/: gtest-all.cc  gtest-main.cpp
tests/src/core/camera/: camera_test.cpp  orthographiccamera_test.cpp  perspectivecamera_test.cpp
tests/src/core/film/: film_test.cpp  filmtile_test.cpp  resolution_test.cpp
tests/src/core/film/tonemapper/: tonemapper_test.cpp  uncharted2filmictonemapper_test.cpp
tests/src/core/geometry/: geometry_test.cpp  primitive_test.cpp  sphereprimitive_test.cpp  trianglemesh_test.cpp
tests/src/core/geometry/primitives/: primitive_test.cpp  triangleprimitive_test.cpp
tests/src/core/ray/: ray_test.cpp
tests/src/core/sampling/: sampling_test.cpp
tests/src/core/spectrum/: illuminantspectrum_test.cpp  reflectantspectrum_test.cpp  sampledspectrum_test.cpp  spectrum_test.cpp
tests/src/entity/components/: component_test.cpp  transform_test.cpp
tests/src/exporter/: exporter_test.cpp  stbexporter_test.cpp
tests/src/math/: linalg_test.cpp  mathutils_test.cpp  matrix4x4_test.cpp  normal3_test.cpp  point2_test.cpp  point3_test.cpp  point4_test.cpp  ray_test.cpp  rect_test.cpp  transform_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp
tests/src/sampling/: sampling_test.cpp
tests/src/system/threading/: threadpool_test.cpp
(+60 files in other folders)
